--- a/Views/Home/_RegistrationLoginModal.cshtml
+++ b/Views/Home/_RegistrationLoginModal.cshtml
@@ -13,9 +13,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <!-- Login form goes here -->
-            </div>
+            <div class="modal-body"></div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                 <button type="submit" class="btn btn-primary">Вход</button>
